# uv-talk

./: LICENSE.txt  README.md
container/: Dockerfile  README.md  justfile  pyproject.toml
container/src/: main.py
talk/: README.md  presentation.ipynb  pyproject.toml
