[project]
name = "uv-talk"
description = "A talk about uv"
version = "2024.10"
authors = [{name = "Benjamin Allen", email = "ben05allen@hotmail.com"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.4",
]
